[package]
name = "hprof-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hprof-tui"
path = "src/main.rs"

[dependencies]
ratatui = "=0.26.3"
crossterm = "=0.27.0"
anyhow = "=1.0.89"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
clap = { version = "=4.4.18", features = ["derive"] }

jvm-hprof = { path = "../heaplens-main/hprof-analyzer/crates/jvm-hprof" }
memmap2 = "=0.9.5"
