[package]
name = "hprof-tui"
version = "0.2.0"
edition = "2021"
description = "Terminal UI for Java/Android HPROF heap dump analysis — powered by the HeapLens engine"

[[bin]]
name = "hprof-tui"
path = "src/main.rs"

[dependencies]
# HeapLens production engine: two-phase CSR parser, Lengauer-Tarjan dominators,
# HeapQL query engine, waste analysis, GC-root paths, object inspection
hprof-analyzer = { git = "https://github.com/sachinkg12/heaplens", package = "hprof-analyzer", tag = "v1.0.19" }

ratatui   = "0.29"
crossterm = "0.28"
anyhow    = "1.0"
serde_json = "1.0"
clap      = { version = "4.0", features = ["derive"] }
memmap2   = "0.9"
